Consent Radio Button Mobile Fix

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -110,7 +110,7 @@ body {
       -webkit-background-clip: unset;
       -webkit-text-fill-color: unset;
       @include gradient-x($bronze-light, $bronze-dark);
-      
+
       color: $white;
 
       &:hover {
@@ -282,10 +282,14 @@ body {
 
 #spark-registration-form {
   font-family: $font-family-sans;
-  
 
   .consent {
     align-items: flex-start;
+    width: 100%;
+
+    input {
+      width: 128px;
+    }
 
     .form-check-label {
       max-width: 100%;
@@ -305,7 +309,7 @@ body {
 .thank-you {
   padding-top: 50px;
   padding-bottom: 50px;
-  
+
   h2 {
     max-width: 100%;
   }
@@ -470,6 +474,14 @@ footer {
       min-height: 100vh;
     }
   }
+
+  #spark-registration-form {
+    .consent {
+      input {
+        width: 26px;
+      }
+    }
+  }
 }
 
 @include media-breakpoint-up(lg) {
@@ -486,7 +498,7 @@ footer {
   h2 {
     font-size: 3.5rem;
   }
-  
+
   h3 {
     font-size: 2.4rem;
   }
